2008-03-11  Stephen Gran  <sgran@debian.org>
	* [r29] Rename debian/README to debian/README.Debian
	* [r30] Change footer on manpage - now part of main tarball
	* [r31] debian/rules build changes for new autoconf system

2008-03-18  Benjamin Drung  <benjamin.drung@gmail.com>

	* [r28] README, man/dvdbackup.1: Synchronized.

2008-03-17  Benjamin Drung  <benjamin.drung@gmail.com>

	* [r27] configure.ac: added checks suggested by autoscan

	* [r27] Makefile.am: NEWS and README are now installed in docdir
	* [r27] man/Makefile.am: Updated.

	* [r27] NEWS: Updated.

	* [r26] README: changed spaces to tabs

	* [r26] man/dvdbackup.1: updated options

	* [r26] src/dvdbackup.c, src/dvdbackup.h, src/main.c: fixed typos
	  - DVD instead of dvd
	  - DVDs instead of DVD's
	  - used cannot instead of can't, do not instead of don't

2008-03-11  Benjamin Drung  <benjamin.drung@gmail.com>

	* [r25] ChangeLog: Updated.
	
	* [r25] debian/dvdbackup.1: moved from here...
	* [r25] man/dvdbackup.1: ...to here
	* [r25] configure.ac, Makefile.am, man/Makefile.am:
	  added man page to distribution

2008-03-11  Stephen Gran  <sgran@debian.org>

	* [r18] INSTALL: update to newest version

	* [r17] configure.ac: Use getconf to find LFS CFLAGS

	* [r16] debian/*: Bring up to date with Debian

	* [r15] debian/dvdbackup.1, README: Documentation cleanup, and 
	  removal of mentions of mandatory fields that are now guessed.

2008-03-11  Benjamin Drung  <benjamin.drung@gmail.com>

	* [r14] ChangeLog, NEWS: Updated.

	* [r14] INSTALL: Replaced by generic installation instructions from
	  autoconf

	* [r14] src/dvdbackup.c, src/main.c (print_help, main): The command line
	  option -v, --verbose has no option anymore.

2008-03-10  Benjamin Drung  <benjamin.drung@gmail.com>

	* [r13] ChangeLog, NEWS: Created ChangeLog from subversion commits and
	  extracted useful changes to NEWS.

	* [r13] po/dvdbackup.pot: Updated

	* [r13] README, Usage:
	  merged changes from Usage to README and removed Usage
