@@ -1,0 +1,3 @@
+debian/README.Debian
+debian/tmp/usr/share/doc/dvdbackup/NEWS
+debian/tmp/usr/share/doc/dvdbackup/README
